# plugin_system

./: Cargo.toml  Makefile
libs/plugin_interface/src/: lib.rs
plugins/: README.md
plugins/example_plugin/: Cargo.toml  config.json
plugins/example_plugin/src/: lib.rs
plugins/hello_world/: Cargo.toml
plugins/hello_world/src/: lib.rs
src/: main.rs
